[package]
name = "Terralistic"
version = "0.5.0-alpha"
edition = "2021"
description = "Terralistic"
build = "build_main.rs"
license-file = "LICENSE"
repository = "https:://github.com/Zorz42/Terralistic"
keywords = ["game", "terralistic"]
categories = ["game"]

[[bin]]
name = "terralistic"
path = "main.rs"

[dependencies]
directories = "4.0"
chrono = "0.4"
bincode = "1.3"
rlua = "0.19"
enet = "0.3"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gl = "0.14"
snap = "1.1"
copypasta = "0.8"
rand = "0.8"
noise = "0.8"
once_cell = "1.17"
fnv = "1.0"

# set custom dependency for windows
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "=0.35.1", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "=0.35.1", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["use-pkgconfig", "static-link"] }

# set custom dependency for macos
[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "=0.35.1", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["bundled", "static-link"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[build-dependencies]
bincode = "1.3"
rlua = "0.19"
enet = "0.3"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
gl = "0.14"
snap = "1.1"
copypasta = "0.8"
once_cell = "1.17"
fnv = "1.0"
darklua = "0.8"
png = "0.17"


# set custom dependency for windows
[target.'cfg(windows)'.build-dependencies]
sdl2 = { version = "=0.35.1", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.build-dependencies]
sdl2 = { version = "=0.35.1", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["use-pkgconfig", "static-link"] }

# set custom dependency for macos
[target.'cfg(target_os = "macos")'.build-dependencies]
sdl2 = { version = "=0.35.1", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["bundled", "static-link"] }

[package.metadata.bundle.bin.terralistic]
name = "Terralistic"
identifier = "com.Zorz42.Terralistic"
icon = ["Build/Resources/icon.icns"]
copyright = "Copyright (c) Zorz42 2022. All rights reserved."
category = "Game"
short_description = "Terralistic is a game."
long_description = """
Terralistic is a Terraria fan game.
It has some technical stuff that I miss in Terraria,
like: native mod support, good performance,
custom programming language for mods, online accounts,
good ui and so on...
"""
deb_depends = []
osx_frameworks = []
