[package]
name = "Terralistic"
version = "0.5.2-alpha"
edition = "2021"
description = "Terralistic"
build = "build_main.rs"
license-file = "LICENSE"
repository = "https:://github.com/Zorz42/Terralistic"
keywords = ["game", "terralistic"]
categories = ["games", "graphics", "gui", "network-programming", "rendering"]

[[bin]]
name = "terralistic"
path = "main.rs"

[dependencies]
rustls = { version = "0.22", default-features = false, features = ["ring"] }
webpki-roots = { version = "0.26", default-features = false }
rustls-pki-types = { version = "1.1", default-features = false }
directories = { version = "5.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bincode = { version = "1.3", default-features = false }
rlua = { version = "0.19" }
anyhow = {version =  "1.0", default-features = false, features = ["std", "backtrace"] }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
gl = { version = "0.14", default-features = false }
snap = { version = "1.1", default-features = false }
arboard = "3.3"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
noise = { version = "0.8", default-features = false }
fnv = { version = "1.0", default-features = false }
hecs = { version = "0.10", default-features = false, features = ["std"] }
message-io = { version = "0.18", default-features = false, features = ["tcp"] }
kvptree = "0.1"

# set custom dependency for windows
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "=0.36.0", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.36.0", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "=0.36.0", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.36.0", features = ["use-pkgconfig", "static-link"] }

# set custom dependency for macos
[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "=0.36.0", features = ["static-link"] }
sdl2-sys = { version = "=0.36.0", features = ["static-link"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.test]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
strip = false
lto = false
codegen-units = 256
opt-level = 0

[build-dependencies]
rustls = { version = "0.22", default-features = false, features = ["ring"] }
webpki-roots = { version = "0.26", default-features = false }
rustls-pki-types = { version = "1.1", default-features = false }
bincode = { version = "1.3", default-features = false }
rlua = { version = "0.19" }
anyhow = {version =  "1.0", features = ["std", "backtrace"] }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
gl = { version = "0.14", default-features = false }
snap = { version = "1.1", default-features = false }
arboard = "3.3"
fnv = "1.0"
darklua = "0.12"
png = "0.17"
hecs = { version = "0.10", default-features = false, features = ["std"] }
message-io = { version = "0.18", default-features = false, features = ["tcp"] }
winres = "0.1"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
kvptree = "0.1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

# set custom dependency for windows
[target.'cfg(windows)'.build-dependencies]
sdl2 = { version = "=0.36.0", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.36.0", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.build-dependencies]
sdl2 = { version = "=0.36.0", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.36.0", features = ["use-pkgconfig", "static-link"] }

# set custom dependency for macos
[target.'cfg(target_os = "macos")'.build-dependencies]
sdl2 = { version = "=0.36.0", features = ["static-link"] }
sdl2-sys = { version = "=0.36.0", features = ["static-link"] }

[package.metadata.bundle]
name = "Terralistic"
identifier = "com.Zorz42.Terralistic"
icon = ["resources/icon.icns"]
copyright = "Copyright (c) Zorz42 2022. All rights reserved."
category = "Game"
short_description = "Terralistic is a game."
long_description = """
Terralistic is a Terraria fan game.
It has some technical stuff that I miss in Terraria,
like: native mod support, good performance,
custom programming language for mods, online accounts,
good ui and so on...
"""
deb_depends = []
osx_frameworks = []
