[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_mut = {"path" = "../Libraries/shared_mut/"}
snap = "1.0.5"
bincode = "1.3.3"
serde = "1.0.130"
serde_derive = "1.0.130"
rand = "0.8.5"
once_cell = "1.16.0"
fnv = "1.0.7"
rlua = "0.19.4"
graphics = {"path" = "../Libraries/graphics/"}
enet = "0.3.0"

[lib]
name = "shared"
path = "shared.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3