[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snap = "1.1.0"
bincode = "1.3.3"
serde = "1.0.152"
serde_derive = "1.0.152"
rand = "0.8.5"
once_cell = "1.17.0"
fnv = "1.0.7"
rlua = "0.19.4"
events = {"path" = "../Libraries/events/"}
enet = "0.3.0"
anyhow = "1.0.69"

[lib]
name = "shared"
path = "mod.rs"