[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snap = "1.1"
bincode = "1.3"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8"
once_cell = "1.17"
fnv = "1.0"
rlua = "0.19"
events = {"path" = "../Libraries/events/"}
enet = "0.3"
anyhow = "1.0"

[lib]
name = "shared"
path = "mod.rs"