[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
snap = "1.1.0"
serde = "1.0.152"
serde_derive = "1.0.152"
sdl2 = { version = "=0.35.2", features = ["bundled", "static-link"] }
sdl2-sys = "=0.35.2"
copypasta = "0.8.1"
bincode = "1.3.3"


# select sdl2 as sdl2-sys 0.35.1 for macos as it wont compile with 0.35.2
# for linux and windows use 0.35.2 as it wont compile with 0.35.1
#[target.'cfg(target_os = "macos")'.dependencies]
#sdl2-sys = "=0.35.1"
#[target.'cfg(target_os = "linux")'.dependencies]
#sdl2-sys = "=0.35.2"

[lib]
name = "graphics"
path = "graphics.rs"
