[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
snap = "1.1.0"
serde = "1.0.152"
serde_derive = "1.0.152"
sdl2 = { version = "=0.35.2", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.35.2", features = ["use-pkgconfig", "static-link"] }
copypasta = "0.8.1"
bincode = "1.3.3"

[lib]
name = "graphics"
path = "graphics.rs"
