[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
snap = "1.1"
serde = "1.0"
serde_derive = "1.0"
copypasta = "0.8"
bincode = "1.3"

# set custom dependency for windows
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "=0.35.1", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "=0.35.1", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["use-pkgconfig", "static-link"] }

# set custom dependency for macos
[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "=0.35.1", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.1", features = ["bundled", "static-link"] }

[lib]
name = "graphics"
path = "graphics.rs"
