[package]
name = "terralistic_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = {"path" = "../../Libraries/events"}
shared = {"path" = "../../Shared"}
bincode = "1.3.3"
rlua = "0.19.4"
rand = "0.8.5"
enet = "0.3.0"
noise = "0.8.2"
snap = "1.1.0"
anyhow = "1.0.69"

[lib]
name = "terralistic_server"
path = "server.rs"