[package]
name = "terralistic_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = {"path" = "../../Libraries/events"}
shared = {"path" = "../../Shared"}
bincode = "1.3"
rlua = "0.19"
rand = "0.8"
enet = "0.3"
noise = "0.8"
snap = "1.1"
anyhow = "1.0"

[lib]
name = "terralistic_server"
path = "mod.rs"